--- a/index.html
+++ b/index.html
@@ -39,8 +39,7 @@
     <p>© <span id="y"></span> Throttle Path — All news headlines © respective publishers.</p>
   </footer>
 
-  <script src="js/utils.js"></script>
-  <script src="js/app.js"></script>
+  <script type="module" src="js/app.js"></script>
   <script>
     if ('serviceWorker' in navigator) {
       navigator.serviceWorker.register('./sw.js').catch(()=>{});
