--- a/topics.html
+++ b/topics.html
@@ -3,8 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Topics • Throttle Path</title>
-  <link rel="icon" href="assets/logo.svg">
+  <title>Topics — Throttle Path</title>
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
@@ -14,22 +13,23 @@
       <span>Throttle Path</span>
     </a>
     <nav>
-      <a href="./topics.html" aria-current="page">Topics</a>
+      <a href="./topics.html">Topics</a>
       <a href="./about.html">About</a>
     </nav>
   </header>
 
   <main class="container">
     <h1>Browse by Topic</h1>
-    <div id="topics" class="topics"></div>
+    <ul id="topicList"></ul>
   </main>
 
   <footer class="site-footer">
-    <p>© <span id="y"></span> Throttle Path.</p>
+    <p>© <span id="y"></span> Throttle Path — All news headlines © respective publishers.</p>
   </footer>
 
-  <script src="js/utils.js"></script>
-  <script src="js/topics.js"></script>
-  <script>document.getElementById('y').textContent = new Date().getFullYear();</script>
+  <script type="module" src="js/topics.js"></script>
+  <script>
+    document.getElementById('y').textContent = new Date().getFullYear();
+  </script>
 </body>
 </html>
