--- a/about.html
+++ b/about.html
@@ -3,35 +3,24 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>About • Throttle Path</title>
-  <link rel="icon" href="assets/logo.svg">
+  <title>About — Throttle Path</title>
+
+  <link rel="manifest" href="manifest.webmanifest">
+  <link rel="icon" href="assets/logo-192.png" type="image/png">
+  <link rel="apple-touch-icon" href="assets/logo-192.png">
   <link rel="stylesheet" href="css/styles.css">
+  <meta name="theme-color" content="#0f172a">
 </head>
 <body>
-  <header class="site-header">
-    <a class="brand" href="./">
-      <img src="assets/logo.svg" alt="Throttle Path logo">
-      <span>Throttle Path</span>
-    </a>
-    <nav>
-      <a href="./topics.html">Topics</a>
-      <a href="./about.html" aria-current="page">About</a>
-    </nav>
-  </header>
+  <div id="site-header"></div>
 
-  <main class="container prose">
+  <main class="container">
     <h1>About Throttle Path</h1>
-    <p><strong>Throttle Path</strong> curates the latest motorcycle news, race results, and new-bike launches from reputable outlets. Headlines link to original sources. Images are royalty-free via Unsplash.</p>
-    <h2>Contact</h2>
-    <p>Open an issue on the GitHub repo or email: you@example.com</p>
-    <h2>Attribution</h2>
-    <p>Photos via Unsplash Source API. Headlines © publishers; used as excerpts with links.</p>
+    <p>Throttle Path is your go-to hub for MotoGP, racing, and motorcycle industry news. We bring you the latest updates, reviews, and insights straight to your screen.</p>
   </main>
 
-  <footer class="site-footer">
-    <p>© <span id="y"></span> Throttle Path.</p>
-  </footer>
+  <div id="site-footer"></div>
 
-  <script>document.getElementById('y').textContent = new Date().getFullYear();</script>
+  <script src="js/loader.js"></script>
 </body>
 </html>
