--- a/topics.html
+++ b/topics.html
@@ -4,32 +4,28 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Topics — Throttle Path</title>
+
+  <link rel="manifest" href="manifest.webmanifest">
+  <link rel="icon" href="assets/logo-192.png" type="image/png">
+  <link rel="apple-touch-icon" href="assets/logo-192.png">
   <link rel="stylesheet" href="css/styles.css">
+  <meta name="theme-color" content="#0f172a">
 </head>
 <body>
-  <header class="site-header">
-    <a class="brand" href="./">
-      <img src="assets/logo.svg" alt="Throttle Path logo">
-      <span>Throttle Path</span>
-    </a>
-    <nav>
-      <a href="./topics.html">Topics</a>
-      <a href="./about.html">About</a>
-    </nav>
-  </header>
+  <div id="site-header"></div>
 
   <main class="container">
-    <h1>Browse by Topic</h1>
-    <ul id="topicList"></ul>
+    <h1>Topics</h1>
+    <ul>
+      <li><a href="./topics.html#motogp">MotoGP</a></li>
+      <li><a href="./topics.html#motocross">Motocross</a></li>
+      <li><a href="./topics.html#reviews">Bike Reviews</a></li>
+      <li><a href="./topics.html#gear">Riding Gear</a></li>
+    </ul>
   </main>
 
-  <footer class="site-footer">
-    <p>© <span id="y"></span> Throttle Path — All news headlines © respective publishers.</p>
-  </footer>
+  <div id="site-footer"></div>
 
-  <script type="module" src="js/topics.js"></script>
-  <script>
-    document.getElementById('y').textContent = new Date().getFullYear();
-  </script>
+  <script src="js/loader.js"></script>
 </body>
 </html>
