--- a/article.html
+++ b/article.html
@@ -6,22 +6,32 @@
   <title>Article — Throttle Path</title>
 
   <link rel="manifest" href="manifest.webmanifest">
-  <link rel="icon" href="assets/logo-192.png" type="image/png">
-  <link rel="apple-touch-icon" href="assets/logo-192.png">
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="icon" href="assets/logo-192-v2.png" sizes="192x192">
+  <link rel="icon" href="assets/logo-512-v2.png" sizes="512x512">
+  <link rel="apple-touch-icon" href="assets/logo-192-v2.png">
   <meta name="theme-color" content="#0f172a">
+
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-  <div id="site-header"></div>
+  <header id="site-header"></header>
 
-  <main class="container" id="article-container">
-    <h1>Loading article...</h1>
+  <main class="container">
+    <article id="article"></article>
+    <nav class="article-nav">
+      <a id="prev" href="#">&larr; Prev</a>
+      <a id="next" href="#">Next &rarr;</a>
+    </nav>
   </main>
 
-  <div id="site-footer"></div>
+  <footer id="site-footer"></footer>
 
-  <script src="js/utils.js"></script>
-  <script src="js/article.js"></script>
+  <script type="module" src="js/article.js"></script>
   <script src="js/loader.js"></script>
+  <script>
+    if ('serviceWorker' in navigator) {
+      navigator.serviceWorker.register('./sw.js').catch(()=>{});
+    }
+  </script>
 </body>
 </html>
