--- a/header.html
+++ b/header.html
@@ -1,6 +1,6 @@
 <header class="site-header">
   <a class="brand" href="./">
-    <img src="assets/logo-192.png" alt="Throttle Path logo">
+    <img src="assets/logo-192-v2.png" alt="Throttle Path logo" width="40" height="40">
     <span>Throttle Path</span>
   </a>
   <nav>
