--- a/index.html
+++ b/index.html
@@ -6,13 +6,15 @@
   <title>Throttle Path — Moto News</title>
 
   <link rel="manifest" href="manifest.webmanifest">
-  <link rel="icon" href="assets/logo-192.png" type="image/png">
-  <link rel="apple-touch-icon" href="assets/logo-192.png">
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="icon" href="assets/logo-192-v2.png" sizes="192x192">
+  <link rel="icon" href="assets/logo-512-v2.png" sizes="512x512">
+  <link rel="apple-touch-icon" href="assets/logo-192-v2.png">
   <meta name="theme-color" content="#0f172a">
+
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-  <div id="site-header"></div> <!-- header loads here -->
+  <header id="site-header"></header>
 
   <main class="container">
     <section class="hero">
@@ -28,10 +30,9 @@
     <nav id="pager" class="pager"></nav>
   </main>
 
-  <div id="site-footer"></div> <!-- footer loads here -->
+  <footer id="site-footer"></footer>
 
-  <script src="js/utils.js"></script>
-  <script src="js/app.js"></script>
+  <script type="module" src="js/app.js"></script>
   <script src="js/loader.js"></script>
   <script>
     if ('serviceWorker' in navigator) {
