--- a/404.html
+++ b/404.html
@@ -3,35 +3,51 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>404 — Page Not Found | Throttle Path</title>
-
-  <link rel="manifest" href="manifest.webmanifest">
-  <link rel="icon" href="assets/logo-192-v2.png" sizes="192x192">
-  <link rel="icon" href="assets/logo-512-v2.png" sizes="512x512">
-  <link rel="apple-touch-icon" href="assets/logo-192-v2.png">
-  <meta name="theme-color" content="#0f172a">
-
+  <title>Page Not Found — Throttle Path</title>
+  <link rel="icon" href="assets/logo.png">
   <link rel="stylesheet" href="css/styles.css">
   <style>
-    main { text-align:center; padding:3rem 1rem; }
+    .error-page {
+      text-align: center;
+      padding: 4rem 1rem;
+    }
+    .error-page h1 {
+      font-size: 5rem;
+      margin-bottom: 1rem;
+      color: #ef4444;
+    }
+    .error-page p {
+      font-size: 1.2rem;
+      margin-bottom: 2rem;
+    }
+    .error-page a {
+      display: inline-block;
+      padding: 0.75rem 1.5rem;
+      background: #0f172a;
+      color: white;
+      text-decoration: none;
+      border-radius: 6px;
+    }
+    .error-page a:hover {
+      background: #1e293b;
+    }
   </style>
 </head>
 <body>
-  <header id="site-header"></header>
+  <!-- Load Header -->
+  <div id="header"></div>
 
   <main class="container">
-    <h1>404</h1>
-    <p>Sorry, the page you’re looking for doesn’t exist.</p>
-    <p><a href="./">← Back to Home</a></p>
+    <section class="error-page">
+      <h1>404</h1>
+      <p>Oops! The page you’re looking for doesn’t exist.</p>
+      <a href="./index.html">⬅ Back to Home</a>
+    </section>
   </main>
 
-  <footer id="site-footer"></footer>
+  <!-- Load Footer -->
+  <div id="footer"></div>
 
   <script src="js/loader.js"></script>
-  <script>
-    if ('serviceWorker' in navigator) {
-      navigator.serviceWorker.register('./sw.js').catch(()=>{});
-    }
-  </script>
 </body>
 </html>
